# cb_rf_api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  README.md~  cost_price.xlsx  docker-compose.yaml  docker-compose.yml  main.py  main.py~  pyproject.toml  pyproject.toml~  requirements.txt
api_v1/: __init__.py
api_v1/app/: info.py
api_v1/auth/: models.py  router.py  service.py
api_v1/db/: crud.py  session.py
api_v1/db/models/: base.py  models.py  models.py~
api_v1/db/repositories/: __init__.py  abstract.py  abstract.py~
api_v1/file/: router.py
api_v1/service/: router.py  service.py
api_v1/service/models/: __init__.py  models.py
build_files/: Dockerfile
core/: config.py  config.py~  create_fasapi_app.py  dependencies.py
models/: base.py
utils/: utils.py
