[tool.poetry]
name = "currency-cb-rf"
version = "0.1.0"
description = ""
authors = ["Mikhail Nosaev <nosaev.mihail@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pytz = "^2024.2"
asyncpg = "^0.30.0"
pydantic = "^2.10.3"
black = "^24.10.0"
requests = "^2.32.3"
pydantic-settings = "^2.6.1"
orjson = "^3.10.12"
email-validator = "^2.2.0"
aiosqlite = "^0.20.0"
aiohttp = "^3.11.10"
pyjwt = "^2.10.1"
jwt = "^1.3.1"
python-multipart = "^0.0.19"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
